--- a/themes/tent/sass/components/_page.scss
+++ b/themes/tent/sass/components/_page.scss
@@ -4,10 +4,6 @@
 
 .page__title {
   @include title;
-  @include font-size(2.4);
-}
-
-.page__title {
   @include font-size(1.75);
 }
 
