--- a/themes/tent/sass/components/_sidebar.scss
+++ b/themes/tent/sass/components/_sidebar.scss
@@ -3,7 +3,13 @@
 --------------------------------------------------------------*/
 
 .sidebar {
+  @include pad-between;
+
   flex-grow: 0;
+  min-width: 300px;
+  padding-right: $base__space-unit * 2;
+  padding-top: $base__space-unit;
+  border-left: 1px solid $color__border;
 
   h1,
   h2,
@@ -13,6 +19,7 @@
   h6 {
     @include title;
     @include font-size(1.4);
+    line-height: 1.75;
   }
 
   ul,
