--- a/themes/tent/sass/components/_site.scss
+++ b/themes/tent/sass/components/_site.scss
@@ -101,5 +101,6 @@
 }
 
 .site__main {
+  @include pad-between;
   flex-grow: 1;
 }
